[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyStress"
version = "0.1.0"
description = "A comprehensive stress testing data generator with cryptographically secure randomness"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Srijan Verma", email = "srijan@example.com"},
]
keywords = ["testing", "data-generation", "random", "stress-testing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/sharpsalt/PyStress"
"Bug Reports" = "https://github.com/sharpsalt/PyStress/issues"
